--- a/hello.yml
+++ b/hello.yml
@@ -1,14 +1,14 @@
-# First Play
+# 1st Play
 - name: Play - Handle Files in all hosts
   hosts: all
   tasks:
   - name: all host are identified with a file
     copy:
       content: My family is {{ ansible_os_family }}
-      dest: /family.txt
+      dest: /tmp/family.txt
       mode: '777'
 
-# Second play
+# 2nd Play
 - name: Play - for Alpines Nodejs app
   hosts: app_group
   tasks:
@@ -49,3 +49,34 @@
     command: forever start /node-app/app.js
     when: "forever_list.stdout.find('/node-app/app.js') == -1"
 
+- name: Play - Install and configure Nginx as a LoadBalancer
+  hosts: loadbalancer
+  become: yes
+  tasks:
+    - name: Update cache
+      apt: update_cache=yes   
+    - name: Install Nginx
+
+      apt:
+        name: nginx
+        state: latest
+      become: yes
+    - name: Copy the Nginx config file to /etc/nginx/sites-available
+
+      copy:
+        src: ./nginx.cfg
+        dest: /etc/nginx/sites-available/nginx.cfg
+      become: yes
+    - name: Create symlink of the config file at /etc/nginx/sites-enabled
+
+      file:
+        src: /etc/nginx/sites-available/nginx.cfg
+        dest: /etc/nginx/sites-enabled/default
+        state: link
+      become: yes
+    - name: Restart nginx to apply changes
+
+      service:
+        name: nginx
+        state: restarted
+      become: yes
